feat: Introduce comprehensive requisition and test result management, including critical thresholds and PDF report generation.